--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <li>하트</li>
          <li>주연</li>
        </ol>
-      <img src="http://rgo4.com/files/attach/images/2676751/299/270/006/d5dbd4cabfbdf17071c68ac6ab9d8987.jpg>
+      <img src="http://rgo4.com/files/attach/images/2676751/299/270/006/d5dbd4cabfbdf17071c68ac6ab9d8987.jpg">
                  
    </body>
 
